@@ -60,6 +60,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Francois Ochsenbein                  francois.ochsenbein@gmail.com
     Gaspar Galaz                         ggalaz@astro.puc.cl
     Geoffry Krouchi                      geoffrey.krouchi@etu.univ-lyon1.fr
+    Giacomo Lorenzetti                   glorenzetti@cefca.es
     Giulia Golini                        giulia.golini@gmail.com
     Guillaume Mahler                     guillaume.mahler@univ-lyon1.fr
     Hamed Altafi                         hamed.altafi2@gmail.com
